plugins {
    id 'java'
    id 'application'
    id 'com.gradleup.shadow' version '8.3.5'
    id 'jacoco'
}

group = 'app.salary'
version = '1.0.0'

sourceCompatibility = '21'
targetCompatibility = '21'

repositories {
    mavenCentral()
}

dependencies {
    // Lombok (kept for entity getters/setters/builders)
    compileOnly 'org.projectlombok:lombok:1.18.30'
    annotationProcessor 'org.projectlombok:lombok:1.18.30'
    testCompileOnly 'org.projectlombok:lombok:1.18.30'
    testAnnotationProcessor 'org.projectlombok:lombok:1.18.30'

    // Javalin (replaces Spring Boot)
    implementation 'io.javalin:javalin:7.2.0'
    implementation 'io.javalin:javalin-micrometer:7.2.0'

    // Google Cloud — direct clients (no Spring Cloud GCP wrappers)
    implementation platform('com.google.cloud:libraries-bom:26.83.0')
    implementation 'com.google.cloud:google-cloud-firestore'
    implementation 'com.google.cloud:google-cloud-storage'
    implementation 'com.google.cloud:google-cloud-pubsub'
    implementation 'com.google.cloud:google-cloud-logging-logback:0.142.0-alpha'

    // JSON
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.17.1'
    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.17.1'

    // Caching (replaces Spring Cache + Redis — sufficient for local Docker)
    implementation 'com.github.ben-manes.caffeine:caffeine:3.1.8'

    // Utilities
    implementation 'commons-codec:commons-codec:1.17.1'
    implementation 'org.apache.commons:commons-lang3:3.18.0'

    // Metrics
    implementation 'io.micrometer:micrometer-registry-prometheus:1.13.4'

    // Logging
    runtimeOnly 'ch.qos.logback:logback-classic:1.5.13'
    implementation 'org.slf4j:slf4j-api:2.0.13'
    runtimeOnly 'net.logstash.logback:logstash-logback-encoder:8.0'
    runtimeOnly 'org.codehaus.janino:janino:3.1.12'

    // Testing
    testImplementation 'org.junit.jupiter:junit-jupiter:5.10.3'
    testImplementation 'org.mockito:mockito-core:5.7.0'
    testImplementation 'org.mockito:mockito-junit-jupiter:5.7.0'
    testImplementation 'io.javalin:javalin-testtools:7.2.0'
}

application {
    mainClass = 'app.salary.rulepack.Main'
}

shadowJar {
    archiveBaseName = 'rule-pack-service'
    archiveClassifier = 'all'
    archiveVersion = '1.0.0'
    mergeServiceFiles()
    manifest {
        attributes 'Main-Class': 'app.salary.rulepack.Main'
    }
}

test {
    useJUnitPlatform()
    finalizedBy jacocoTestReport
}

jacoco {
    toolVersion = "0.8.10"
}
